--- a/styles/styles.css
+++ b/styles/styles.css
@@ -138,26 +138,91 @@ footer {
 /* Pages */
 /* Historia */
 /* Inicio Boostrap */
+.card-img-overlay {
+    padding: 0;
+}
 .card-group {
     justify-content: center;
+    justify-self: center;
 }
-.card {
+.integrantes-card {
     margin: 15px;
-    min-width: 20rem;
-    max-width: 20rem;
+    min-width: 19rem;
+    max-width: 19rem;
+    padding: 5px;
 }
 .card-img-top {
     height: 20rem;
 }
 /* Fin Boostrap */
-.historia_grid .subtitulo-principal {
+.indice-legado {
+    background-image: url(../assets/img/fondo-negro.jpg);
+    background-position: bottom;
+    background-size: cover;
+    min-height: 100vh;
+    display: grid;
+    justify-content: center;
+    grid-template-areas:
+        "titulo titulo titulo"
+        "integrantes historia otros";
+}
+.indice-legado .titulo-principal {
+    grid-area: titulo;
+    align-self: center;
+}
+.indice-card {
+    border: solid 2px #797878;
+    margin: 15px;
+    width: 20rem;
+    height: 25rem;
+    text-decoration: none;
+}
+.indice-card-int,
+.indice-card-his,
+.indice-card-otros {
+    background-position: center;
+}
+.indice-card-int {
+    background-image: url(../assets/img/integrantes-retro-recortada.jpg);
+    grid-area: integrantes;
+}
+.indice-card-his {
+    background-image: url(../assets/img/entrada-luzbelito.jpg);
+    grid-area: historia;
+}
+.indice-card-otros {
+    background-image: url(../assets/img/logo-pr-fondo-negro.jpg);
+    grid-area: otros;
+}
+.indice-card-title {
+    color: #00000000;
+    font-size: 1rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    text-transform: uppercase;
+    justify-content: center;
+    align-items: center;
+}
+.indice-card :hover {
+    background-color: #00000048;
+    color: #ffffff;
+}
+.integrantes_bg .subtitulo-principal {
     justify-self: center;
+    text-align: center;
+    background-color: #343a40;
+    width: 75%;
 }
-.historia_grid {
+.integrantes_bg {
     padding: 10px;
+    background-image: url(../assets/img/los-redondos-posando-color.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
 }
-.historia_cards {
-    max-width: 60%;
+.integrantes_cards {
+    max-width: 70%;
     justify-self: center;
 }
 
@@ -205,6 +270,7 @@ footer {
         font-size: 1.5em;
     }
 }
+
 /* MD Menores a 767px */
 @media (max-width: 767px) {
     /* Header */
