--- a/styles/styles.css
+++ b/styles/styles.css
@@ -156,9 +156,10 @@ footer {
 }
 /* Fin Boostrap */
 .indice-legado {
-    background-image: url(../assets/img/fondo-negro.jpg);
+    background-image: url(../assets/img/fondo-negro-2.png);
     background-position: bottom;
     background-size: cover;
+    background-repeat: no-repeat;
     min-height: 100vh;
     display: grid;
     justify-content: center;
