haciendo responsive biografía

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,7 @@ main {
     padding: 10px 3px 3px 3px;
 }
 .subtitulo-principal {
+    justify-self: center;
     color: #ffffff;
     font-family: "Anton", serif;
     font-weight: 400;
@@ -144,6 +145,7 @@ footer {
 .card-group {
     justify-content: center;
     justify-self: center;
+    width: 85%;
 }
 .integrantes-card {
     margin: 15px;
@@ -152,7 +154,13 @@ footer {
     padding: 5px;
 }
 .card-img-top {
-    height: 20rem;
+    height: 75%;
+}
+.scrollspy-example-2 {
+    color: white;
+}
+.integrantes-card .card-body {
+    height: 25%;
 }
 /* Fin Boostrap */
 .indice-legado {
@@ -163,6 +171,7 @@ footer {
     min-height: 100vh;
     display: grid;
     justify-content: center;
+    justify-items: center;
     grid-template-areas:
         "titulo titulo titulo"
         "integrantes historia otros";
@@ -174,7 +183,8 @@ footer {
 .indice-card {
     border: solid 2px #797878;
     margin: 15px;
-    width: 20rem;
+    max-width: 20rem;
+    min-width: 19rem;
     height: 25rem;
     text-decoration: none;
 }
@@ -182,6 +192,7 @@ footer {
 .indice-card-his,
 .indice-card-otros {
     background-position: center;
+    background-size: cover;
 }
 .indice-card-int {
     background-image: url(../assets/img/integrantes-retro-recortada.jpg);
@@ -210,10 +221,9 @@ footer {
     color: #ffffff;
 }
 .integrantes_bg .subtitulo-principal {
-    justify-self: center;
     text-align: center;
     background-color: #343a40;
-    width: 75%;
+    width: 65%;
 }
 .integrantes_bg {
     padding: 10px;
@@ -222,16 +232,40 @@ footer {
     background-size: cover;
     background-position: center;
 }
-.integrantes_cards {
-    max-width: 70%;
+.integrantes-cards-group {
+    max-width: 85%;
     justify-self: center;
 }
-
 .integrantes_grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
 
+.historia {
+    display: grid;
+    justify-self: center;
+    padding: 10px;
+    max-width: 80%;
+}
+.colscroll {
+    height: 35rem;
+    overflow: scroll;
+}
+.colscroll h4 {
+    font-size: 2rem;
+}
+
+.colscroll p {
+    font-size: 1.2rem;
+}
+
+.historia_parrafo {
+    color: white;
+}
+.historia_scroll {
+    padding: 15px;
+    background-color: #2d2c2c;
+}
 /* Comunidad */
 .comunidad-mensaje {
     width: 15rem;
@@ -246,6 +280,14 @@ footer {
 /* QUERYS */
 /* LG Menores a 991px */
 @media (max-width: 991px) {
+    /* Inicio Boostrap */
+    .card-title {
+        font-size: 1rem;
+    }
+    .card-text {
+        font-size: 0.8rem;
+    }
+    /* Fin Boostrap */
     /* Header */
     .logo-pr-header {
         width: 8em;
@@ -270,10 +312,33 @@ footer {
     .index-text-cards {
         font-size: 1.5em;
     }
+    /* Historia */
+    .integrantes-cards-group {
+        max-width: 95%;
+    }
+    .indice-card {
+        margin: 10px;
+        min-width: 15rem;
+        height: 20rem;
+    }
+    .integrantes-card {
+        margin: 10px;
+        min-width: 15rem;
+        max-width: 15rem;
+        height: 25rem;
+    }
 }
 
 /* MD Menores a 767px */
 @media (max-width: 767px) {
+    /* Inicio Boostrap */
+    .card-title {
+        font-size: 0.8rem;
+    }
+    .card-text {
+        font-size: 0.7rem;
+    }
+    /* Fin Boostrap */
     /* Header */
     .logo-pr-header {
         width: 7em;
@@ -290,6 +355,23 @@ footer {
     }
     .index-text-cards {
         font-size: 1.3em;
+    }
+    /* Historia */
+    .indice-legado {
+        grid-template-areas:
+            "titulo titulo"
+            "integrantes historia"
+            "otros otros";
+    }
+    .indice-card {
+        min-width: 13rem;
+        height: 18rem;
+    }
+    .integrantes-card {
+        margin: 5px;
+        min-width: 12rem;
+        max-width: 12rem;
+        height: 20rem;
     }
 }
 
