--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,395 +1,429 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
 /* Reset CSS */
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
-/* Google fonts */
-@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
-
-/* Genericas */
 main {
-    background-color: rgb(0, 0, 0);
+  background-color: #000;
 }
-.titulo-principal {
-    justify-self: center;
-    color: #ffffff;
-    font-family: "Anton", serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 3.5em;
-    padding: 10px 3px 3px 3px;
-}
-.subtitulo-principal {
-    justify-self: center;
-    color: #ffffff;
-    font-family: "Anton", serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 1.5em;
-    padding: 5px;
-    margin: 5px;
-}
+
 /* Header */
 /* Inicio Boostrap */
 .navbar-brand {
-    margin: 2px 2px 2px 30px;
+  margin: 2px 2px 2px 30px;
 }
+
 .navbar-collapse {
-    justify-content: flex-end;
-    margin-right: 25px;
+  justify-content: flex-end;
+  margin-right: 25px;
 }
+
 .nav-item {
-    padding: 2px 5px;
-    margin: 2px 5px;
-    font-family: "Anton", serif;
-    font-weight: 400;
-    font-style: normal;
+  padding: 2px 5px;
+  margin: 2px 5px;
+  font-family: "Anton", serif;
+  font-weight: 400;
+  font-style: normal;
 }
+
 .nav-link {
-    color: #ad3737;
+  color: #ad3737;
 }
+
 /* Logo header */
 .logo-pr-header {
-    width: 10em;
-    height: auto;
+  width: 10em;
+  height: auto;
 }
+
 /* Fin Boostrap */
+/*Media Querys */
+@media (max-width: 991px) {
+  /* Header */
+  .logo-pr-header {
+    width: 8em;
+  }
+}
+/* MD Menores a 767px */
+@media (max-width: 767px) {
+  /* Header */
+  .logo-pr-header {
+    width: 7em;
+  }
+}
+/* SM Menores a 575px */
+@media (max-width: 575px) {
+  /* Header */
+  .logo-pr-header {
+    width: 6em;
+  }
+}
 /* Footer */
 footer {
-    display: flex;
-    align-content: center;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    height: 5rem;
-    background-color: #2d2c2c;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  height: 5rem;
+  background-color: #2d2c2c;
 }
+
 .logo-pr-footer {
-    width: 9%;
-    min-width: 6em;
-    padding: 3px;
-    margin: 5px;
+  width: 9%;
+  min-width: 6em;
+  padding: 3px;
+  margin: 5px;
 }
+
 .copyright {
-    font-size: 0.7em;
-    padding: 3px;
-    margin: 5px;
-    color: #fff;
+  font-size: 0.7em;
+  padding: 3px;
+  margin: 5px;
+  color: #fff;
 }
+
 /* Index */
+.titulo-principal {
+  justify-self: center;
+  color: #ffffff;
+  font-family: "Anton", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 3.5em;
+  padding: 10px 3px 3px 3px;
+}
+
 .main-index {
-    display: grid;
-    background-image: url(../assets/img/todos-los-discos-fondo.jpg);
-    background-size: contain;
-    background-position: bottom;
-    background-repeat: no-repeat;
-    grid-template-rows: 15% 15% 1fr;
-    justify-items: center;
-    align-items: center;
-    min-height: 100vh;
-    gap: 20px;
-    padding: 15px;
-    color: #fff;
-    text-align: center;
+  display: grid;
+  background-image: url(../assets/img/todos-los-discos-fondo.jpg);
+  background-size: contain;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  grid-template-rows: 15% 15% 1fr;
+  justify-items: center;
+  align-items: center;
+  min-height: 100vh;
+  gap: 20px;
+  padding: 15px;
+  color: #fff;
+  text-align: center;
 }
+
 .main-index-logo {
-    width: 60%;
-    min-width: 23em;
-    padding: 5px;
+  width: 60%;
+  min-width: 23em;
+  padding: 5px;
 }
+
 .index-links {
-    align-self: center;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    width: 70%;
-    gap: 2em;
+  align-self: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  width: 70%;
+  gap: 2em;
 }
 
 .index-links article {
-    align-self: center;
+  align-self: center;
 }
+
 .items-cards {
-    display: flex;
-    flex-direction: column-reverse;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    text-decoration: none;
-    max-width: 8.5em;
-    padding: 1px;
-    margin: 5px 50px;
+  display: flex;
+  flex-direction: column-reverse;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  text-decoration: none;
+  max-width: 8.5em;
+  padding: 1px;
+  margin: 5px 50px;
 }
+
 .index-text-cards {
-    background-color: #2d2c2ce0;
-    text-transform: uppercase;
-    border-bottom: solid 3px #ad3737;
-    border-radius: 8px;
-    color: #af2424;
-    font-size: 2em;
-    font-family: "Anton", serif;
-    font-weight: 400;
-    font-style: normal;
-    padding: 7px;
-}
-
-/* Pages */
-/* Historia */
-/* Inicio Boostrap */
-.card-img-overlay {
-    padding: 0;
-}
-.card-group {
-    justify-content: center;
-    justify-self: center;
-    width: 85%;
-}
-.integrantes-card {
-    margin: 15px;
-    min-width: 19rem;
-    max-width: 19rem;
-    padding: 5px;
-}
-.card-img-top {
-    height: 75%;
-}
-.scrollspy-example-2 {
-    color: white;
-}
-.integrantes-card .card-body {
-    height: 25%;
-}
-/* Fin Boostrap */
-.indice-legado {
-    background-image: url(../assets/img/fondo-negro-2.png);
-    background-position: bottom;
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-height: 100vh;
-    display: grid;
-    justify-content: center;
-    justify-items: center;
-    grid-template-areas:
-        "titulo titulo titulo"
-        "integrantes historia otros";
-}
-.indice-legado .titulo-principal {
-    grid-area: titulo;
-    align-self: center;
-}
-.indice-card {
-    border: solid 2px #797878;
-    margin: 15px;
-    max-width: 20rem;
-    min-width: 19rem;
-    height: 25rem;
-    text-decoration: none;
-}
-.indice-card-int,
-.indice-card-his,
-.indice-card-otros {
-    background-position: center;
-    background-size: cover;
-}
-.indice-card-int {
-    background-image: url(../assets/img/integrantes-retro-recortada.jpg);
-    grid-area: integrantes;
-}
-.indice-card-his {
-    background-image: url(../assets/img/entrada-luzbelito.jpg);
-    grid-area: historia;
-}
-.indice-card-otros {
-    background-image: url(../assets/img/logo-pr-fondo-negro.jpg);
-    grid-area: otros;
-}
-.indice-card-title {
-    color: #00000000;
-    font-size: 1rem;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    text-transform: uppercase;
-    justify-content: center;
-    align-items: center;
-}
-.indice-card :hover {
-    background-color: #00000048;
-    color: #ffffff;
-}
-.integrantes_bg .subtitulo-principal {
-    text-align: center;
-    background-color: #343a40;
-    width: 65%;
-}
-.integrantes_bg {
-    padding: 10px;
-    background-image: url(../assets/img/los-redondos-posando-color.jpg);
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-}
-.integrantes-cards-group {
-    max-width: 85%;
-    justify-self: center;
-}
-.integrantes_grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
-
-.historia {
-    display: grid;
-    justify-self: center;
-    padding: 10px;
-    max-width: 80%;
-}
-.colscroll {
-    height: 35rem;
-    overflow: scroll;
-}
-.colscroll h4 {
-    font-size: 2rem;
-}
-
-.colscroll p {
-    font-size: 1.2rem;
-}
-
-.historia_parrafo {
-    color: white;
-}
-.historia_scroll {
-    padding: 15px;
-    background-color: #2d2c2c;
-}
-/* Comunidad */
-.comunidad-mensaje {
-    width: 15rem;
-    height: 8rem;
-}
-
-.discos-img {
-    width: 10%;
-    padding: 5px;
+  background-color: rgba(45, 44, 44, 0.8784313725);
+  text-transform: uppercase;
+  border-bottom: solid 3px #ad3737;
+  border-radius: 8px;
+  color: #af2424;
+  font-size: 2em;
+  font-family: "Anton", serif;
+  font-weight: 400;
+  font-style: normal;
+  padding: 7px;
 }
 
 /* QUERYS */
 /* LG Menores a 991px */
 @media (max-width: 991px) {
-    /* Inicio Boostrap */
-    .card-title {
-        font-size: 1rem;
-    }
-    .card-text {
-        font-size: 0.8rem;
-    }
-    /* Fin Boostrap */
-    /* Header */
-    .logo-pr-header {
-        width: 8em;
-    }
-    /* Index */
-    .titulo-principal {
-        font-size: 2.5em;
-    }
-    .main-index {
-        grid-template-rows: 15% 15% 1fr;
-        min-height: 85vh;
-    }
-    .main-index .titulo-principal {
-        align-self: flex-start;
-    }
-    .main-index-logo {
-        width: 50%;
-    }
-    .index-links {
-        gap: 0.5em;
-    }
-    .index-text-cards {
-        font-size: 1.5em;
-    }
-    /* Historia */
-    .integrantes-cards-group {
-        max-width: 95%;
-    }
-    .indice-card {
-        margin: 10px;
-        min-width: 15rem;
-        height: 20rem;
-    }
-    .integrantes-card {
-        margin: 10px;
-        min-width: 15rem;
-        max-width: 15rem;
-        height: 25rem;
-    }
+  /* Index */
+  .titulo-principal {
+    font-size: 2.5em;
+  }
+  .main-index {
+    grid-template-rows: 15% 15% 1fr;
+    min-height: 85vh;
+  }
+  .main-index .titulo-principal {
+    align-self: flex-start;
+  }
+  .main-index-logo {
+    width: 50%;
+  }
+  .index-links {
+    gap: 0.5em;
+  }
+  .index-text-cards {
+    font-size: 1.5em;
+  }
 }
-
 /* MD Menores a 767px */
 @media (max-width: 767px) {
-    /* Inicio Boostrap */
-    .card-title {
-        font-size: 0.8rem;
-    }
-    .card-text {
-        font-size: 0.7rem;
-    }
-    /* Fin Boostrap */
-    /* Header */
-    .logo-pr-header {
-        width: 7em;
-    }
-    /* Index */
-    .main-index {
-        gap: 15px;
-    }
-    .titulo-principal {
-        font-size: 2em;
-    }
-    .index-links {
-        width: 85%;
-    }
-    .index-text-cards {
-        font-size: 1.3em;
-    }
-    /* Historia */
-    .indice-legado {
-        grid-template-areas:
-            "titulo titulo"
-            "integrantes historia"
-            "otros otros";
-    }
-    .indice-card {
-        min-width: 13rem;
-        height: 18rem;
-    }
-    .integrantes-card {
-        margin: 5px;
-        min-width: 12rem;
-        max-width: 12rem;
-        height: 20rem;
-    }
+  /* Index */
+  .main-index {
+    gap: 15px;
+  }
+  .titulo-principal {
+    font-size: 2em;
+  }
+  .index-links {
+    width: 85%;
+  }
+  .index-text-cards {
+    font-size: 1.3em;
+  }
 }
-
 /* SM Menores a 575px */
 @media (max-width: 575px) {
-    /* Header */
-    .logo-pr-header {
-        width: 6em;
-    }
-    /* Index */
-    .main-index {
-        gap: 10px;
-    }
-    .main-index-logo {
-        min-width: 18em;
-        padding: 2px;
-    }
-    .titulo-principal {
-        font-size: 1.7em;
-    }
+  /* Index */
+  .main-index {
+    gap: 10px;
+  }
+  .main-index-logo {
+    min-width: 18em;
+    padding: 2px;
+  }
+  .titulo-principal {
+    font-size: 1.7em;
+  }
 }
+/* Biografía */
+/* Inicio Boostrap */
+.card-img-overlay {
+  padding: 0;
+}
+
+.card-group {
+  justify-content: center;
+  justify-self: center;
+  width: 85%;
+}
+
+.integrantes-card {
+  margin: 15px;
+  min-width: 19rem;
+  max-width: 19rem;
+  padding: 5px;
+}
+
+.card-img-top {
+  height: 75%;
+}
+
+.scrollspy-example-2 {
+  color: white;
+}
+
+.integrantes-card .card-body {
+  height: 25%;
+}
+
+/* Fin Boostrap */
+.indice-legado {
+  background-image: url(../assets/img/fondo-negro-2.png);
+  background-position: bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  grid-template-areas: "titulo titulo titulo" "integrantes historia otros";
+}
+
+.indice-legado .titulo-principal {
+  grid-area: titulo;
+  align-self: center;
+}
+
+.indice-card {
+  border: solid 2px #797878;
+  margin: 15px;
+  max-width: 20rem;
+  min-width: 19rem;
+  height: 25rem;
+  text-decoration: none;
+}
+
+.indice-card-int,
+.indice-card-his,
+.indice-card-otros {
+  background-position: center;
+  background-size: cover;
+}
+
+.indice-card-int {
+  background-image: url(../assets/img/integrantes-retro-recortada.jpg);
+  grid-area: integrantes;
+}
+
+.indice-card-his {
+  background-image: url(../assets/img/entrada-luzbelito.jpg);
+  grid-area: historia;
+}
+
+.indice-card-otros {
+  background-image: url(../assets/img/logo-pr-fondo-negro.jpg);
+  grid-area: otros;
+}
+
+.indice-card-title {
+  color: rgba(0, 0, 0, 0);
+  font-size: 1rem;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  text-transform: uppercase;
+  justify-content: center;
+  align-items: center;
+}
+
+.indice-card :hover {
+  background-color: rgba(0, 0, 0, 0.2823529412);
+  color: #ffffff;
+}
+
+.integrantes_bg .subtitulo-principal {
+  text-align: center;
+  background-color: #343a40;
+  width: 65%;
+}
+
+.integrantes_bg {
+  padding: 10px;
+  background-image: url(../assets/img/los-redondos-posando-color.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+}
+
+.integrantes-cards-group {
+  max-width: 85%;
+  justify-self: center;
+}
+
+.integrantes_grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.historia {
+  display: grid;
+  justify-self: center;
+  padding: 10px;
+  max-width: 80%;
+}
+
+.colscroll {
+  height: 35rem;
+  overflow: scroll;
+}
+
+.colscroll h4 {
+  font-size: 2rem;
+}
+
+.colscroll p {
+  font-size: 1.2rem;
+}
+
+.historia_parrafo {
+  color: white;
+}
+
+.historia_scroll {
+  padding: 15px;
+  background-color: #2d2c2c;
+}
+
+/* QUERYS */
+/* LG Menores a 991px */
+@media (max-width: 991px) {
+  /* Inicio Boostrap */
+  .card-title {
+    font-size: 1rem;
+  }
+  .card-text {
+    font-size: 0.8rem;
+  }
+  /* Fin Boostrap */
+  /* Biografía */
+  .integrantes-cards-group {
+    max-width: 95%;
+  }
+  .indice-card {
+    margin: 10px;
+    min-width: 15rem;
+    height: 20rem;
+  }
+  .integrantes-card {
+    margin: 10px;
+    min-width: 15rem;
+    max-width: 15rem;
+    height: 25rem;
+  }
+}
+/* MD Menores a 767px */
+@media (max-width: 767px) {
+  /* Inicio Boostrap */
+  .card-title {
+    font-size: 0.8rem;
+  }
+  .card-text {
+    font-size: 0.7rem;
+  }
+  /* Fin Boostrap */
+  /* Biografia */
+  .indice-legado {
+    grid-template-areas: "titulo titulo" "integrantes historia" "otros otros";
+  }
+  .indice-card {
+    min-width: 13rem;
+    height: 18rem;
+  }
+  .integrantes-card {
+    margin: 5px;
+    min-width: 12rem;
+    max-width: 12rem;
+    height: 20rem;
+  }
+}
+/* Comunidad */
+.comunidad-mensaje {
+  width: 15rem;
+  height: 8rem;
+}
+
+/* Discografía */
+.discos-img {
+  width: 10%;
+  padding: 5px;
+}
+
+/*# sourceMappingURL=styles.css.map */
