Agregando información al index, y realizando grilla de links

--- a/sass/partials/base/_tipografias.scss
+++ b/sass/partials/base/_tipografias.scss
@@ -1,2 +1,5 @@
-// Font
+// Fonts
+// Anton
 @import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
+// Oswald
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
