--- a/sass/partials/pages/_biografia.scss
+++ b/sass/partials/pages/_biografia.scss
@@ -81,7 +81,7 @@
     background-color: #00000048;
     color: #ffffff;
 }
-.integrantes_bg .subtitulo-principal {
+.integrantes_bg .subtitle {
     text-align: center;
     background-color: #343a40;
     width: 65%;
