--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
 /* Reset CSS */
 * {
   margin: 0;
@@ -12,6 +13,10 @@ main {
 
 /* Header */
 /* Inicio Boostrap */
+.navbar {
+  background-color: #0d0d0d;
+}
+
 .navbar-brand {
   margin: 2px 2px 2px 30px;
 }
@@ -30,7 +35,7 @@ main {
 }
 
 .nav-link {
-  color: #ad3737;
+  color: #d91a2a;
 }
 
 /* Logo header */
@@ -68,8 +73,8 @@ footer {
   align-items: center;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  background-color: #0d0d0d;
   height: 5rem;
-  background-color: #2d2c2c;
 }
 
 .logo-pr-footer {
@@ -83,13 +88,12 @@ footer {
   font-size: 0.7em;
   padding: 3px;
   margin: 5px;
-  color: #fff;
+  color: #f2f2f2;
 }
 
-/* Index */
-.titulo-principal {
+.main-title {
   justify-self: center;
-  color: #ffffff;
+  color: #f2f2f2;
   font-family: "Anton", serif;
   font-weight: 400;
   font-style: normal;
@@ -97,20 +101,42 @@ footer {
   padding: 10px 3px 3px 3px;
 }
 
+.subtitle {
+  justify-self: center;
+  color: #f2f2f2;
+  font-family: "Anton", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 2.5em;
+  padding: 5px;
+  margin: 5px;
+}
+
+.paragraph {
+  color: #f2f2f2;
+  font-size: 1.5em;
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+/* Index */
 .main-index {
   display: grid;
+  grid-template-rows: 1fr 1fr 1.2fr;
+  justify-items: center;
+  align-items: center;
+  text-align: center;
+  padding: 25px 0 0 0;
+}
+
+.introduction {
   background-image: url(../assets/img/todos-los-discos-fondo.jpg);
   background-size: contain;
   background-position: bottom;
   background-repeat: no-repeat;
-  grid-template-rows: 15% 15% 1fr;
-  justify-items: center;
-  align-items: center;
+  mask-image: linear-gradient(black 70%, transparent);
   min-height: 100vh;
-  gap: 20px;
-  padding: 15px;
-  color: #fff;
-  text-align: center;
 }
 
 .main-index-logo {
@@ -119,44 +145,86 @@ footer {
   padding: 5px;
 }
 
+.index-links-bg {
+  display: flex;
+  background-image: linear-gradient(to top, rgba(64, 11, 15, 0.1529411765) 20%, rgba(242, 242, 242, 0.0196078431), black);
+  width: 100%;
+  height: 100%;
+  padding-bottom: 10em;
+  align-items: center;
+  justify-content: center;
+}
+
 .index-links {
-  align-self: center;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  display: grid;
   justify-content: center;
-  width: 70%;
-  gap: 2em;
-}
-
-.index-links article {
-  align-self: center;
-}
-
-.items-cards {
-  display: flex;
-  flex-direction: column-reverse;
+  align-items: center;
   align-content: center;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  text-decoration: none;
-  max-width: 8.5em;
-  padding: 1px;
-  margin: 5px 50px;
+  grid-template-areas: "biography biography recitals" " discography community recitals";
+  padding: 10px;
+  gap: 7px;
+  background-color: rgba(128, 128, 128, 0.031372549);
+  width: 69em;
+  height: 47em;
 }
-
-.index-text-cards {
-  background-color: rgba(45, 44, 44, 0.8784313725);
-  text-transform: uppercase;
-  border-bottom: solid 3px #ad3737;
-  border-radius: 8px;
-  color: #af2424;
+.index-links a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgba(242, 242, 242, 0.7058823529);
+  border: solid rgba(140, 20, 30, 0.2745098039) 1px;
   font-size: 2em;
+  text-transform: uppercase;
   font-family: "Anton", serif;
   font-weight: 400;
   font-style: normal;
-  padding: 7px;
+  text-decoration: none;
+  padding: 5px;
+  width: 100%;
+  height: 100%;
+}
+.index-links a:hover {
+  color: #f2f2f2;
+  border: solid rgba(242, 242, 242, 0.2745098039) 1px;
+}
+
+.index_biography-link,
+.index_community-link,
+.index_discography-link,
+.index_recitals-link {
+  background-size: cover;
+}
+
+.index_biography-link {
+  grid-area: biography;
+  background-image: url(../assets/img/indio-skay.jpg);
+  background-position: center;
+  width: 44.5em;
+  height: 22em;
+}
+
+.index_recitals-link {
+  grid-area: recitals;
+  background-image: url(../assets/img/skay.jpg);
+  background-position: center;
+  width: 22em;
+  height: 45em;
+}
+
+.index_discography-link {
+  grid-area: discography;
+  background-image: url(../assets/img/gulp.jpg);
+  background-position: center;
+  width: 22em;
+  height: 22.5em;
+}
+
+.index_community-link {
+  grid-area: community;
+  background-image: url(../assets/img/los-redondos-armados.jpg);
+  background-position: center;
+  width: 22em;
+  height: 22.5em;
 }
 
 /* QUERYS */
@@ -309,7 +377,7 @@ footer {
   color: #ffffff;
 }
 
-.integrantes_bg .subtitulo-principal {
+.integrantes_bg .subtitle {
   text-align: center;
   background-color: #343a40;
   width: 65%;
