--- a/sass/partials/utilities/_maps.scss
+++ b/sass/partials/utilities/_maps.scss
@@ -5,6 +5,7 @@ $color-theme: (
     absolute-board: #400b0f,
     absolute-white: #f2f2f2,
     absolute-black: #0d0d0d,
+    absolute-gray: #808080,
 );
 
 // Font Sizes
