--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -14,6 +14,7 @@
 @use "partials/components/main-title";
 @use "partials/components/subtitle";
 @use "partials/components/paragraph";
+@use "partials/components/index-links-grid";
 
 // Pages
 @use "partials/pages/index";
