--- a/sass/partials/pages/_index.scss
+++ b/sass/partials/pages/_index.scss
@@ -1,15 +1,14 @@
 /* Index */
 .main-index {
     display: grid;
-    grid-template-rows: 1fr 1fr 1.2fr;
+    grid-template-rows: 1fr 0.3fr 1fr;
     justify-items: center;
-    align-items: center;
     text-align: center;
     padding: 25px 0 0 0;
 }
 .introduction {
     background-image: url(../assets/img/todos-los-discos-fondo.jpg);
-    background-size: contain;
+    background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
     mask-image: linear-gradient(black 70%, transparent);
@@ -20,101 +19,24 @@
     min-width: 23em;
     padding: 5px;
 }
-.index-links-bg {
-    display: flex;
-    background-image: linear-gradient(to top, #400b0f27 20%, #f2f2f205, black);
-    width: 100%;
-    height: 100%;
-    padding-bottom: 10em;
-    align-items: center;
-    justify-content: center;
-}
-.index-links {
+.welcome {
     display: grid;
     justify-content: center;
-    align-items: center;
-    align-content: center;
-    grid-template-areas:
-        "biography biography recitals"
-        " discography community recitals";
-    padding: 10px;
-    gap: 7px;
-    background-color: #80808008;
-    width: 69em;
-    height: 47em;
-    a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        // Error Sass no me toma los maps
-        // color: map-get($color-theme, absolute-white);
-        color: #f2f2f2b4;
-        border: solid #8c141e46 1px;
-        // Error Sass no me toma los maps
-        // font-size: map-get($font-size, l);
-        font-size: 2em;
-        text-transform: uppercase;
-        font-family: "Anton", serif;
-        font-weight: 400;
-        font-style: normal;
-        text-decoration: none;
-        padding: 5px;
-        width: 100%;
-        height: 100%;
-        &:hover {
-            color: #f2f2f2;
-            border: solid #f2f2f246 1px;
-        }
-    }
+    align-content: end;
+    width: 100%;
+    height: 100%;
 }
-.index_biography-link,
-.index_community-link,
-.index_discography-link,
-.index_recitals-link {
-    // Error sass no me toma los maps
-    // border: solid map-get($color-theme, secondary-red) 3px;
-    background-size: cover;
+.welcome-p {
+    padding-top: 5px;
+    margin-bottom: 3px;
+    border-top: solid #8c141e46 2px;
+    text-transform: uppercase;
 }
-.index_biography-link {
-    grid-area: biography;
-    background-image: url(../assets/img/indio-skay.jpg);
-    background-position: center;
-    width: 44.5em;
-    height: 22em;
-}
-.index_recitals-link {
-    grid-area: recitals;
-    background-image: url(../assets/img/skay.jpg);
-    background-position: center;
-    width: 22em;
-    height: 45em;
-}
-.index_discography-link {
-    grid-area: discography;
-    background-image: url(../assets/img/gulp.jpg);
-    background-position: center;
-    width: 22em;
-    height: 22.5em;
-}
-.index_community-link {
-    grid-area: community;
-    background-image: url(../assets/img/los-redondos-armados.jpg);
-    background-position: center;
-    // También errror con mixins
-    // @include medidas(22em, 22.55);
-    width: 22em;
-    height: 22.5em;
-}
-
 /* QUERYS */
 /* LG Menores a 991px */
 @media (max-width: 991px) {
     /* Index */
-    .titulo-principal {
-        font-size: 2.5em;
-    }
     .main-index {
-        grid-template-rows: 15% 15% 1fr;
         min-height: 85vh;
     }
     .main-index .titulo-principal {
@@ -126,9 +48,6 @@
     .index-links {
         gap: 0.5em;
     }
-    .index-text-cards {
-        font-size: 1.5em;
-    }
 }
 
 /* MD Menores a 767px */
@@ -136,9 +55,6 @@
     /* Index */
     .main-index {
         gap: 15px;
-    }
-    .titulo-principal {
-        font-size: 2em;
     }
     .index-links {
         width: 85%;
@@ -157,8 +73,5 @@
     .main-index-logo {
         min-width: 18em;
         padding: 2px;
-    }
-    .titulo-principal {
-        font-size: 1.7em;
     }
 }
