Agregado keywords y description

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,6 +1,6 @@
 // Base
 @use "partials/base/tipografias";
-@use "partials/base/_reset";
+@use "partials/base/reset";
 
 // Utilities
 @use "partials/utilities/maps";
