--- a/sass/partials/pages/_discografia.scss
+++ b/sass/partials/pages/_discografia.scss
@@ -1,5 +1,117 @@
 /* Discografía */
-.discos-img {
-    width: 10%;
+.discography-bg {
+    padding: 10px 5px;
+    background: #000000dd url(../assets/icons/museo-redondo-blanco.png);
+    background-blend-mode: darken;
+    background-position: center;
+    background-repeat: no-repeat;
+    .subtitle {
+        border-bottom: solid #400b0f 2px;
+    }
+}
+.black-bg {
+    width: 40%;
+    height: 70%;
+    background-color: #0d0d0dc9;
+    position: absolute;
+    right: 10%;
+    top: 25%;
+}
+.discography-disk-list {
+    position: relative;
+    padding: 10px;
+    margin: 5% 0 10px 0;
+    width: 100%;
+    height: 100vh;
+}
+.discography_disk {
+    align-items: center;
+    position: absolute;
+    width: 15rem;
+    height: 15rem;
+}
+.disk-name {
+    position: absolute;
+    width: 50%;
+    bottom: 0;
     padding: 5px;
+    font-family: "Anton", serif;
+    font-weight: 400;
+    font-style: normal;
+    text-transform: uppercase;
+    text-align: left;
+    font-size: 1.5em;
+    color: rgba(0, 0, 0, 0);
+}
+.discography_disk-img {
+    z-index: 1;
+    margin: 2px;
+    width: 100%;
+    height: 100%;
+    border: solid #80808060 1px;
+    border-radius: 10px;
+    &:hover {
+        transform: translateX(50%);
+        transition: ease-out 1.5s;
+    }
+    &:hover ~ .disk-name {
+        transform: translateX(160%);
+        transition: ease-out 1.6s;
+        color: #f2f2f2;
+        background-color: rgba(0, 0, 0, 0.377);
+    }
+}
+.discography_disk-momo-sampler {
+    &:hover ~ .song-list {
+        color: red;
+    }
+}
+
+.discography_disk-gulp {
+    top: 45%;
+    left: 1%;
+}
+
+.discography_disk-oktubre {
+    top: 40%;
+    left: 4%;
+}
+
+.discography_disk-ojo-idiota {
+    top: 35%;
+    left: 7%;
+}
+
+.discography_disk-bang-bang {
+    top: 30%;
+    left: 10%;
+}
+
+.discography_disk-la-mosca {
+    top: 25%;
+    left: 13%;
+}
+.discography_disk-lobo-suelto {
+    top: 20%;
+    left: 16%;
+}
+
+.discography_disk-cordero-atado {
+    top: 15%;
+    left: 19%;
+}
+
+.discography_disk-luz-belito {
+    top: 10%;
+    left: 22%;
+}
+
+.discography_disk-ultimo-bondi {
+    top: 5%;
+    left: 25%;
+}
+
+.discography_disk-momo-sampler {
+    top: 0%;
+    left: 28%;
 }
