--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,14 +7,19 @@
   padding: 0;
 }
 
+figure {
+  margin: 0;
+}
+
 main {
   background-color: #000;
+  min-height: 100vh;
 }
 
 /* Header */
 /* Inicio Boostrap */
 .navbar {
-  background-color: #0d0d0d;
+  background-color: #0d0d0d !important;
 }
 
 .navbar-brand {
@@ -601,9 +606,126 @@ footer {
 }
 
 /* Discografía */
-.discos-img {
-  width: 10%;
+.discography-bg {
+  padding: 10px 5px;
+  background: rgba(0, 0, 0, 0.8666666667) url(../assets/icons/museo-redondo-blanco.png);
+  background-blend-mode: darken;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.discography-bg .subtitle {
+  border-bottom: solid #400b0f 2px;
+}
+
+.black-bg {
+  width: 40%;
+  height: 70%;
+  background-color: rgba(13, 13, 13, 0.7882352941);
+  position: absolute;
+  right: 10%;
+  top: 25%;
+}
+
+.discography-disk-list {
+  position: relative;
+  padding: 10px;
+  margin: 5% 0 10px 0;
+  width: 100%;
+  height: 100vh;
+}
+
+.discography_disk {
+  align-items: center;
+  position: absolute;
+  width: 15rem;
+  height: 15rem;
+}
+
+.disk-name {
+  position: absolute;
+  width: 50%;
+  bottom: 0;
   padding: 5px;
+  font-family: "Anton", serif;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: uppercase;
+  text-align: left;
+  font-size: 1.5em;
+  color: rgba(0, 0, 0, 0);
+}
+
+.discography_disk-img {
+  z-index: 1;
+  margin: 2px;
+  width: 100%;
+  height: 100%;
+  border: solid rgba(128, 128, 128, 0.3764705882) 1px;
+  border-radius: 10px;
+}
+.discography_disk-img:hover {
+  transform: translateX(50%);
+  transition: ease-out 1.5s;
+}
+.discography_disk-img:hover ~ .disk-name {
+  transform: translateX(160%);
+  transition: ease-out 1.6s;
+  color: #f2f2f2;
+  background-color: rgba(0, 0, 0, 0.377);
+}
+
+.discography_disk-momo-sampler:hover ~ .song-list {
+  color: red;
+}
+
+.discography_disk-gulp {
+  top: 45%;
+  left: 1%;
+}
+
+.discography_disk-oktubre {
+  top: 40%;
+  left: 4%;
+}
+
+.discography_disk-ojo-idiota {
+  top: 35%;
+  left: 7%;
+}
+
+.discography_disk-bang-bang {
+  top: 30%;
+  left: 10%;
+}
+
+.discography_disk-la-mosca {
+  top: 25%;
+  left: 13%;
+}
+
+.discography_disk-lobo-suelto {
+  top: 20%;
+  left: 16%;
+}
+
+.discography_disk-cordero-atado {
+  top: 15%;
+  left: 19%;
+}
+
+.discography_disk-luz-belito {
+  top: 10%;
+  left: 22%;
+}
+
+.discography_disk-ultimo-bondi {
+  top: 5%;
+  left: 25%;
+}
+
+.discography_disk-momo-sampler {
+  top: 0%;
+  left: 28%;
 }
 
 /*# sourceMappingURL=styles.css.map */
